@@ -1,4 +1,5 @@
-require 'configliere/core_ext'
+require 'configliere/core_ext/blank'
+require 'configliere/deep_hash'
 require 'configliere/param'
 require 'configliere/define'
 require 'configliere/config_file'
@@ -14,12 +15,8 @@ module Configliere
   def self.use *mixins
     mixins = ALL_MIXINS if mixins.include?(:all) || mixins.empty?
     mixins.each do |mixin|
-      # backwards compatibility
-      if mixin.to_sym == :git_style_binaries
-        require "configliere/commands"
-      else
-        require "configliere/#{mixin}"
-      end
+      mixin = :commands if mixin.to_sym == :git_style_binaries # backwards compatibility
+      require "configliere/#{mixin}"
     end
   end
 
@@ -32,9 +29,8 @@ end
 Settings = Configliere.new unless defined?(Settings)
 
 #
-# Allows the
-#   Config :this => that, :cat => :hat
-# pattern.
+# Also define Settings as a function, so you can say
+#   Settings :this => that, :cat => :hat
 #
 def Settings *args
   Settings.defaults(*args)
