@@ -1,2 +1,0 @@
-require 'configliere/core_ext/blank'
-require 'configliere/core_ext/hash'
