@@ -1,3 +1,10 @@
+h2.
+
+
+* Configliere no longer modifies any core classes: deep_merge, deep_set and deep_delete have been moved to a DeepHash class.
+
+* Stripped out some magic: :no_help and :no_env_help (the convention is @:internal@); Settings.argv; Settings.commands?
+
 h2. Version 0.2.1 2011-01-28
 
 * Missing required params include their definition in error message
